--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+    background: linear-gradient(180deg, rgb(231, 231, 231), rgb(255, 255, 255));
     display: flex;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Geist;
     height: 100vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
   }
-  
+
   main {
     display: flex;
     flex-direction: column;
@@ -22,13 +22,13 @@ body {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: #ac4b4b;
     cursor: pointer;
     transition: border-color 0.25s;
     color: white;
   }
   button:hover {
-    border-color: #646cff;
+    border-color: #d4d4d4;
   }
   button:focus,
   button:focus-visible {
@@ -43,15 +43,15 @@ body {
     display: flex;
     flex-direction: column;
     margin: 8px 0;
-    border: 1px solid black;
+    border: 0px solid black;
     gap: 1px;
-    background-color: black;
+    background-color: white;
     border-radius: 8px;
     overflow: auto;
   }
   
   li {
-    background-color: white;
+    background-color: none;
     padding: 8px;
   }
   
@@ -63,3 +63,5 @@ body {
     font-weight: 800;
     text-decoration: none;
   }
+
+ 
