--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f1f3f5;
   --foreground: #171717;
+  --amplify-fonts-default-variable:
+  'Geist', -apple-system, 
 }
 
 /* @theme inline {
@@ -22,5 +24,10 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Geist;
 }
+
+
+
+
+
