--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -50,7 +50,7 @@
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
+  border: 0;
   transition: background 200ms, border 200ms, box-shadow 200ms;
 }
 
