--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #f1f3f5;
+  --background: #ffffff;
   --foreground: #171717;
   --amplify-fonts-default-variable:
   'Geist', -apple-system, 
