--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --font-family-mono: var(--font-geist-mono), system-ui, sans-serif;
   --font-family-sans: var(--font-geist-sans), system-ui, sans-serif;
   --color-gtc-hue: #047d95;
+  --color-gtc-tab: #047d95;
   --color-gtc-bac: oklch(92.9% 0.013 255.508);
   --color-gtc-sec: #FAAB00;
 }
