--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --color-gtc-tab: #047d95;
   --color-gtc-bac: oklch(92.9% 0.013 255.508);
   --color-gtc-sec: #FAAB00;
+  --color-gtc-hov: oklch(70.4% 0.14 182.503);
 }
 
 
